--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -27,8 +27,8 @@
       <thead>
         <tr>
           <th>Created</th>
-          <th>Name</th>
           <th>Site</th>
+          <th>URL</th>
           <th>Selector</th>
           <th>Creator</th>
           <th></th>
@@ -40,8 +40,8 @@
         <% @pages.each do |page| %>
         <tr>
           <td><%= page.created_at.strftime("%m/%d/%Y at %I:%M%p") %></td>
-          <td><%= page.name %></td>
           <td><%= page.domain.truncate(40) %></td>
+          <td><%= page.url %></td>
           <td><code><%= page.css_selector %></code></td>
           <td><%= page&.user&.display_name %></td>
           <td><% if page.page_snapshots.count > 1 %><%= link_to "Latest Change", latest_change_page_path(page), class: "btn btn-default btn-block" %><% end %></td>
